explore user tab bug fix on safari brower

--- a/src/main/webapp/css/navbar.css
+++ b/src/main/webapp/css/navbar.css
@@ -240,7 +240,8 @@ figure {
   margin: 0;
 }
 img {
-  vertical-align: middle;
+  /* vertical-align: middle; */
+  vertical-align: auto;
 }
 .img-responsive {
   display: block;
